--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,11 @@
         </activity>
 
         <activity
-            android:name=".ipcamera.login.LoginActivity" android:theme="@style/AppTheme.NoActionBar"/>
+            android:name=".ipcamera.login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ipcamera.platform.PlatformsActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
