1. Move Activity/Fragment level action (e.g navigate event and backPressed event) to Activity/Fragment, and delete unused observable and observer from BaseViewModel. 2. Add ToolbarViewModel, toolbar_layout, and make devices/ViewPagerActivity include this.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,10 +39,10 @@
         </activity>
 
         <activity
-            android:name=".ipcamera.login.LoginActivity"
+            android:name=".ui.ipcamera.login.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ipcamera.devices.ViewPagerActivity"
+            android:name=".ui.ipcamera.devices.ViewPagerActivity"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
