--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "io.objectbox:objectbox-gradle-plugin:2.3.4"
     }
 }
 
