--- a/config.gradle
+++ b/config.gradle
@@ -14,7 +14,8 @@ ext {
             "support-version": "28.0.0",
             "junit-version"  : "4.12",
             "androidx"       : "1.0.0",
-            "espresso"       : "3.1.0"
+            "espresso"       : "3.1.0",
+            "object-box"     : "2.3.4"
     ]
     //support配置
     support = [
@@ -34,6 +35,9 @@ ext {
     ]
     //依赖第三方配置
     dependencies = [
+            //ORM objectbox-box
+            "objectbox-debug"                      : "io.objectbox:objectbox-android-objectbrowser:1.2.1",
+            "objectbox-release"                    : "io.objectbox:objectbox-android:${versions["object-box"]}",
             //rxjava
             "rxjava"                               : "io.reactivex.rxjava2:rxjava:2.2.3",
             "rxandroid"                            : "io.reactivex.rxjava2:rxandroid:2.1.0",
