1. Add Platform Edit Screen. 2. Update MVVMHabit library.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name=".ui.ipcamera.platforms.PlatformsActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".ui.ipcamera.editplatform.EditPlatformActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
             android:name=".ui.ipcamera.devices.DevicesActivity"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
